# runes-sdk

./: .eslintrc.json  .gitignore  .npmignore  .npmrc  CEX_INTEGRATION_PLAN.md  CHANGELOG.md  Cargo.toml  Dockerfile  IMPLEMENTATION_PLAN.md  LICENSE  README.md  docker-compose.yml  jest.config.js  jest.config.json  jest.integration.config.js  jest.performance.config.js  jest.setup.js  package-lock.json  package.json  previous guide.md  tsconfig.json  tsconfig.test.json  typedoc.json
.github/workflows/: cd.yml  ci-cd.yml  ci.yml
coverage/: lcov.info
coverage/lcov-report/: index.html
deploy/helm/: values-production.yaml  values-staging.yaml
deploy/scripts/: deploy.sh
docs/: api-reference.md  basic-transaction.md  batch-operations.md  cex-integration.md  integration-testing.md  security.md  webhooks.md  websocket.md
docs/api/: README.md
examples/: README.md  basic-transaction.md  basic-transaction.ts  basic-usage.ts  batch-operations.md  batch-operations.ts  monitoring.ts  package.json  security-example.md  security-example.ts  tsconfig.json  webhook-integration.md  webhook-integration.ts  websocket-example.md  websocket-example.ts
examples/basic/: transaction.ts
examples/cex-integration/: index.ts
examples/monitoring/: metrics.ts
examples/websocket/: realtime.ts
k8s/: config.yaml  custom-hpa.yaml  dashboards.yaml  deployment.yaml  hpa.yaml  monitoring.yaml  prometheus-adapter.yaml  redis.yaml
src/: api.ts  errors.ts  index.ts  runes.api.ts  sdk.ts  types.ts
src/__tests__/: api.test.ts  errors.test.ts  helpers.test.ts  index.test.ts  sdk.test.ts  (+2 more)
(+279 files in other folders)
