[package]
name = "runes-sdk"
version = "0.1.12"
edition = "2021"

[lib]
name = "runes_sdk_rust"
path = "src/rust/lib.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1.68"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
sqlx = { version = "0.8.1", features = ["postgres", "runtime-tokio-rustls"], default-features = false }
tracing = "0.1"
metrics = "0.21"
cached = { version = "0.46", default-features = false }
thiserror = "1.0"
mockall = "0.11"
serde_json = "1.0"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.5"
test-case = "3.3" 